--- a/app/src/main/res/layout/detail_morty.xml
+++ b/app/src/main/res/layout/detail_morty.xml
@@ -3,17 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/border"
     android:padding="20dp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cv_img"
-        android:layout_width="170dp"
-        android:layout_height="170dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         app:cardBackgroundColor="#0f766e"
         app:cardCornerRadius="10dp">
 
         <ImageView
-            android:id="@+id/tv_image_Morty"
+            android:id="@+id/item_image_Morty"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/ic_launcher_background" />
@@ -21,31 +22,31 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:id="@+id/tv_name_morty"
+        android:id="@+id/item_name_morty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="10dp"
         android:layout_toRightOf="@id/cv_img"
         android:text="Name"
-        android:textSize="35sp"
+        android:textSize="25sp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/spesies"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tv_name_morty"
-        android:layout_marginLeft="20dp"
+        android:layout_below="@id/item_name_morty"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="10sp"
         android:layout_toRightOf="@id/cv_img"
         android:text="Species :"
         android:textSize="20sp" />
 
     <TextView
-        android:id="@+id/tv_species_morty"
+        android:id="@+id/item_species_morty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tv_name_morty"
+        android:layout_below="@id/item_name_morty"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="10sp"
         android:layout_toRightOf="@id/spesies"
@@ -55,44 +56,65 @@
         android:id="@+id/gender"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tv_species_morty"
-        android:layout_marginLeft="20dp"
+        android:layout_below="@id/item_species_morty"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:layout_toRightOf="@id/cv_img"
         android:text="Gender :"
         android:textSize="20sp" />
 
     <TextView
-        android:id="@+id/tv_gender_morty"
+        android:id="@+id/item_gender_morty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tv_species_morty"
+        android:layout_below="@id/item_species_morty"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="10dp"
         android:layout_toRightOf="@id/spesies"
         android:text="Male"
         android:textSize="20sp" />
-
     <TextView
-        android:id="@+id/tv_status_morty"
+        android:id="@+id/status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/gender"
-        android:layout_marginLeft="20dp"
+        android:layout_below="@id/item_gender_morty"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:layout_toRightOf="@id/cv_img"
-        android:text="Alive"
+        android:text="Status :"
         android:textSize="20sp" />
 
     <TextView
-        android:id="@+id/tv_created_morty"
+        android:id="@+id/item_status_morty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tv_status_morty"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="30dp"
-        android:text="Created"
-        android:textSize="22sp"
-        android:textStyle="italic"/>
+        android:layout_below="@id/item_gender_morty"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="10dp"
+        android:layout_toRightOf="@id/spesies"
+        android:text="Alive"
+        android:textSize="20sp" />
+
+
+    <TextView
+        android:id="@+id/desc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/item_status_morty"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="50dp"
+        android:text="Description"
+        android:textSize="20sp"
+        android:textStyle="bold"/>
+    <TextView
+        android:id="@+id/item_desc_morty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/desc"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:text="Desc"
+        android:textSize="20sp"
+        android:textStyle="normal"/>
 
 </RelativeLayout>
